--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-/*body{
-	margin: 0;
-	padding: 0;
-}*/
 
 *{
 	margin: 0;
 	padding: 0;
+	font-family: Arial;
+	width: auto;
 }
 
 .left{
@@ -15,6 +13,7 @@
 	float: left;
 	padding: 10px;
 	position: relative;
+	padding-left: 1%;
 }
 
 .intro{
@@ -28,22 +27,21 @@
 	height: 100px;
 	width: auto;
 	position: absolute;
-	top: 22%;	
+	top: 28%;	
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
 .intro h1{
-	/*text-align: center;*/
 	position: absolute;
-	top: 67%;
+	top: 75%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
 #intro_h{
 	position: absolute;
-	top: 54%;
+	top: 61%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-weight: normal;
@@ -51,7 +49,7 @@
 
 .intro h4{
 	position: absolute;
-	top: 77%;
+	top: 85%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-size: 13px;
@@ -61,8 +59,8 @@
 	/*border: 2px solid green;*/
 	height: 23%;
 	position: relative;
+	margin-top: 3%;
 }
-
 .profile img{
 	height: 50px;
 	width: auto;
@@ -73,14 +71,8 @@
 	position: absolute;
 	top: 2%;
 	left: 11%;
+	color: #006EB6;
 }
-
-/*.profile hr{
-	position: absolute;
-	top: 5%;
-	left: 11%;
-	color: red;
-}*/
 
 .profile p{
 	position: absolute;
@@ -94,6 +86,7 @@
 	height: 23%;
 	position: relative;
 	margin: 10px 0px;
+	margin-top: 3%;
 }
 
 .contact img{
@@ -108,6 +101,7 @@
 	position: absolute;
 	top: 3%;
 	left: 12%;
+	color: #006EB6;
 }
 
 .contact ul{
@@ -122,7 +116,8 @@
 	position: absolute;
 	top: 30%;
 	left: 6%;
-	color: blue;
+	color: #006EB6;
+	font-weight: bold;
 }
 
 #details{
@@ -135,6 +130,7 @@
 	/*border: 2px solid green;*/
 	height: 26%;
 	position: relative;
+	margin-top: 3%;
 }
 
 .skills img{
@@ -148,12 +144,17 @@
 	position: absolute;
 	top: 3%;
 	left: 12%;
+	color: #006EB6;
 }
 
 .skill_h{
 	position: absolute;
 	top: 22%;
 	left: 27%;
+}
+
+.skill_h h2{
+	color: #006EB6;
 }
 
 .right{
@@ -166,55 +167,165 @@
 
 .education{
 	/*border: 2px solid green;*/
-	height: 30%;
+	height: 36%;
 	position: relative;
+}
+
+.education img{
+	height: 60px;
+	width: auto;
+	position: absolute;
+	top: 2%;
+	left: 2%;
 }
 
 .education h1{
 	position: absolute;
-	top: 3%;
+	top: 4%;
 	left: 12%;
+	color: #006EB6;
 }
 
 .education ul{
 	position: absolute;
 	top: 21%;
-	left: 5%;
+	left: 6%;
 }
 
 .education li{
 	margin-top: 10px;
+	color: #006EB6;
+	font-weight: bold;
 }
 
 .experience{
 	/*border: 2px solid green;*/
-	height: 30%;
+	height: 33%;
 	position: relative;
 	margin: 10px 0;
 }
 
+.experience img{
+	height: 60px;
+	width: auto;
+	position: absolute;
+	top: 2%;
+	left: 2%;
+}
+
 .experience h1{
 	position: absolute;
-	top: 3%;
+	top: 4%;
 	left: 12%;
+	color: #006EB6;
 }
 
 .experience ul{
 	position: absolute;
-	top: 21%;
+	top: 23%;
 	left: 5%;
 }
 
 .experience li{
-	margin-top: 10px;
+	margin-top: 15px;
+	font-weight: bold;
+}
+
+.experience h3{
+	font-weight: normal;
 }
 
 .software{
 	/*border: 2px solid green;*/
-	height: 30%;
+	height: 28%;
 	position: relative;
 }
 
-.software{
-	
+.software img{
+	height: 60px;
+	width: auto;
+	position: absolute;
+	top: 3%;
+	left: 2%;
+}
+
+.software h1{
+	position: absolute;
+	top: 5%;
+	left: 12%;
+	color: #006EB6;
+}
+
+.sleft{
+	/*border: 2px solid coral;*/
+	height: 70%;
+	width: 45%;
+	position: absolute;
+	top: 27%;
+	left: 2%;
+}
+
+.sleft h4{
+	margin-top: 10px;
+}
+
+#photoshop{
+	height: 10px;
+	width: 200px;
+	background-color: #006EB6;
+	margin: 5px 0;
+	margin-bottom: 15px;
+}
+
+#illustrator{
+	height: 10px;
+	width: 180px;
+	background-color: #006EB6;
+	margin: 5px 0;
+	margin-bottom: 15px;
+}
+
+#indesign{
+	height: 10px;
+	width: 160px;
+	background-color: #006EB6;
+	margin: 5px 0;
+	margin-bottom: 15px;
+}
+
+.sright{
+	/*border: 2px solid coral;*/
+	height: 70%;
+	width: 45%;
+	position: absolute;
+	top: 27%;
+	left: 52%;
+}
+
+.right h4{
+	margin-top: 10px;
+}
+
+#dreamweaver{
+	height: 10px;
+	width: 200px;
+	background-color: #006EB6;
+	margin: 5px 0;
+	margin-bottom: 15px;
+}
+
+#aftereffects{
+	height: 10px;
+	width: 150px;
+	background-color: #006EB6;
+	margin: 5px 0;
+	margin-bottom: 15px;
+}
+
+#hc{
+	height: 10px;
+	width: 220px;
+	background-color: #006EB6;
+	margin: 5px 0;
+	margin-bottom: 15px;
 }
